--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,90 @@
 .buttons {
-  width: 30px;
-  height: 30px;
+  width: 90px;
+  height: 90px;
+  border-color: white;
+  background-color: black;
+}
+
+body {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  color: rgb(9, 0, 128);
+  text-align: center;
+  font-size: 20px;
+}
+
+.App {
+  color: #b6b5ca;
+  display: flex;
+  margin-top: 200px;
+}
+
+.winner-board {
+  margin-left: 50px;
+  color: aliceblue;
+}
+
+h3 {
+  color: rgb(248, 252, 252);
+}
+
+.modal {
+  width: 600px;
+  height: 500px;
+  background: rgb(202, 193, 193);
+  border: 1px solid #ccc;
+  transition: 1.1s ease-out;
+  box-shadow: -2rem 2rem 2rem rgba(black, 0.2);
+  filter: blur(0);
+  transform: scale(1);
+  opacity: 1;
+  visibility: visible;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#centered-toggle-button {
+  position: absolute;
+}
+
+.actions {
+  border-top: 1px solid rgb(248, 245, 245);
+  background: rgb(0, 66, 128);
+  padding: 0.5rem 1rem;
+}
+.button {
+  border: 0;
+  background: #1c68da;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  font-size: 0.8rem;
+  line-height: 1;
+}
+.content {
+  padding: 1rem;
+  height: 75%;
+  color: rgb(9, 0, 128);
+}
+
+form {
+  margin-top: 30px;
+  display: grid;
+}
+
+input {
+  height: 100px;
+}
+.name-label {
+  height: 40px;
+}
+
+.grade {
+  margin-right: 50px;
 }
